--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "advent-of-code-2023",
   "author": "James Childers",
+  "version": "1.0.0",
+  "description": "Advent of Code 2023",
+  "scripts": {
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "test": "jest"
+  },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "prettier": "^3.1.0"
+  },
+  "prettier": {
+    "printWidth": 55
   }
 }
