--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "description": "Advent of Code 2023",
   "scripts": {
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "test": "jest"
+    "test": "bun test"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "bun-types": "latest",
     "prettier": "^3.1.0"
   },
   "prettier": {
     "printWidth": 55
+  },
+  "dependencies": {
+    "@swan-io/boxed": "^1.2.0"
   }
 }
